--- a/stankinsv2/solution/StankinsV2/StankinsVariousConsole/StankinsVariousConsole.csproj
+++ b/stankinsv2/solution/StankinsV2/StankinsVariousConsole/StankinsVariousConsole.csproj
@@ -25,6 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="YamlDotNet" Version="5.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Stankins.Alive\Stankins.Alive.csproj" />
     <ProjectReference Include="..\Stankins.Amazon\Stankins.Amazon.csproj" />
     <ProjectReference Include="..\Stankins.File\Stankins.File.csproj" />
@@ -36,6 +40,12 @@
     <ProjectReference Include="..\Stankins.WLW\FileVersionFromDir.csproj" />
     <ProjectReference Include="..\Stankins.XML\Stankins.XML.csproj" />
     <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="stankinsYaml.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
