moved execution to a different folder, to have more than 1 executor

--- a/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
+++ b/stankinsv2/solution/StankinsV2/StankinsStatusWeb/appsettings.json
@@ -1,122 +1,6 @@
 {
 
-  "MonitorData": {
-
-    "UserName": "default",
-    "ExecutorsDynamic": [
-
-      {
-        "Data": {
-          "Type": "StankinsStatusWeb.StartProcess, StankinsAliveMonitor",
-          "FileName": "ping.exe",
-          "Parameters": "www.yahoo.com",
-          "CRON": "*/30 * * * * *"
-        },
-        "CustomData": {
-          "Tags": "exe,ping",
-          "Name": "start ping",
-          "Icon": "process"
-        }
-
-
-      },
-      {
-        "Data": {
-          "Type": "StankinsStatusWeb.PingAddress, StankinsAliveMonitor",
-          "NameSite": "www.yahoo.com",
-          "CRON": "*/30 * * * * *"
-        },
-        "CustomData": {
-          "Tags": "notfound,ping",
-          "Name": "yahoo",
-          "Icon": "computer"
-        }
-
-
-      },
-      {
-        "Data": {
-          "Type": "StankinsStatusWeb.PingAddress, StankinsAliveMonitor",
-          "NameSite": "www.qwezxcasdadasda.com",
-          "CRON": "*/30 * * * * *"
-        },
-        "CustomData": {
-          "Tags": "notfound,ping",
-          "Name": "not found website",
-          "Icon": "computer"
-        }
-
-
-      },
-      {
-        "Data": {
-          "Type": "StankinsStatusWeb.PingAddress, StankinsAliveMonitor",
-          "NameSite": "www.ipify.org",
-          "CRON": "*/30 * * * * *"
-        },
-        "CustomData": {
-          "Tags": "ipify,ping",
-          "Name": "ipify website",
-          "Icon": "computer"
-        }
-
-      },
-      {
-        "Data": {
-          "Type": "StankinsStatusWeb.WebAdress, StankinsAliveMonitor",
-          "URL": "https://api.ipify.org/?format=json",
-          "CRON": "*/30 * * * * *"
-        },
-        "CustomData": {
-          "Tags": "ipify,api",
-          "Name": "ipify api",
-          "Icon": "http"
-        }
-
-      },
-      {
-        "Data": {
-          "Type": "StankinsStatusWeb.WebAdress, StankinsAliveMonitor",
-          "URL": "https://www.qwezxcasdadasda.com/?format=json",
-          "CRON": "*/30 * * * * *"
-        },
-        "CustomData": {
-          "Tags": "notfound,web",
-          "Name": "not found get request",
-          "Icon": "http"
-        }
-
-      },
-      {
-        "Data": {
-          "Type": "StankinsStatusWeb.DatabaseConnection, StankinsAliveMonitor",
-          "ConnectionString": "Server=.;Database=master;Trusted_Connection=True;",
-          "TypeOfReceiver": "Stankins.Alive.ReceiverDBSqlServer, Stankins.Alive",
-          "CRON": "*/30 * * * * *"
-        },
-        "CustomData": {
-          "Tags": "sqlserver,database",
-          "Name": "local server",
-          "Icon": "library_books"
-        }
-
-      },
-      {
-        "Data": {
-          "Type": "StankinsStatusWeb.DatabaseConnection, StankinsAliveMonitor",
-          "ConnectionString": "Server=asdasdasdfw3cfasdfa;Database=master;Trusted_Connection=True;",
-          "TypeOfReceiver": "Stankins.Alive.ReceiverDBSqlServer, Stankins.Alive",
-          "CRON": "*/30 * * * * *"
-        },
-        "CustomData": {
-          "Tags": "sqlserver,not found,database",
-          "Name": "not found database server",
-          "Icon": "library_books"
-        }
-
-      }
-    ]
-  },
+  "MonitorDefaultFile":  "MonitorData/Default.json",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
