--- a/pipelineTemplates/restoreFromArtifact.yml
+++ b/pipelineTemplates/restoreFromArtifact.yml
@@ -1,5 +1,5 @@
   steps:
-    - checkout: none #skip checking out the default repository resource
+    #- checkout: none #skip checking out the default repository resource
     - task: DownloadBuildArtifacts@0
       displayName: 'Download Build Artifacts'
       inputs:
