--- a/stankinsv2/solution/StankinsV2/Stankins.File/Stankins.File.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.File/Stankins.File.csproj
@@ -1,20 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
-
-
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Stankins.Interfaces\Stankins.Interfaces.csproj" />
-    <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" PrivateAssets="all"/>
-    <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" PrivateAssets="all"/>
+    <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" PrivateAssets="all" />
+    <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" PrivateAssets="all" />
   </ItemGroup>
   <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
     <ItemGroup>
-      <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths->WithMetadataValue('ReferenceSourceTarget', 'ProjectReference')->WithMetadataValue('PrivateAssets', 'All'))" />
+      <BuildOutputInPackage Include="@(ReferenceCopyLocalPaths-&gt;WithMetadataValue('ReferenceSourceTarget', 'ProjectReference')-&gt;WithMetadataValue('PrivateAssets', 'All'))" />
     </ItemGroup>
   </Target>
 </Project>
