--- a/stankinsv2/solution/StankinsV2/Stankins.HTML/Stankins.HTML.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.HTML/Stankins.HTML.csproj
@@ -1,15 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
-
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.8.12" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" PrivateAssets="all" />
   </ItemGroup>
