--- a/stankinsv2/solution/StankinsV2/Stankins.Interfaces/Stankins.Interfaces.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.Interfaces/Stankins.Interfaces.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageProjectUrl></PackageProjectUrl>
     <RepositoryUrl>https://github.com/ignatandrei/stankins</RepositoryUrl>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
-
 </Project>
