--- a/stankinsv2/solution/StankinsV2/Stankins.XML/Stankins.XML.csproj
+++ b/stankinsv2/solution/StankinsV2/Stankins.XML/Stankins.XML.csproj
@@ -1,12 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\StankinsCommon\StankinsCommon.csproj" />
     <ProjectReference Include="..\StankinsObjects\StankinsObjects.csproj" />
   </ItemGroup>
-
 </Project>
