--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/Docker/docker-sqlserver-instance.yaml
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/Docker/docker-sqlserver-instance.yaml
@@ -1,7 +1,7 @@
-version: '3.3'
+version: '3'
 services:
   db:
-    image: mcr.microsoft.com/mssql/server
+    image: microsoft/mssql-server-windows-developer #mcr.microsoft.com/mssql/server
     ports:
       - "1433:1433"
     environment:
@@ -9,4 +9,7 @@ services:
       ACCEPT_EULA: "Y"
     healthcheck:
       test: sqlcmd -S (local) -U SA -P '<YourStrong!Passw0rd>' -Q 'select 1'
-   
+networks:
+  default:
+    external:
+      name: nat   
