--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,23 @@ name: $(TeamProject)_$(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)
 
 jobs:
 
-- job: Test
+- job: TestWin # docker compose 19 min
   pool:
     vmImage: 'vs2017-win2016'
+  condition: eq(variables['stop'],1)
+  steps:
+    #- checkout: none #skip checking out the default repository resource
+    - script: |
+        echo test
+        rem dir C:\msbuild.exe /s /b
+        rem docker-compose -f stankinsv2/solution/StankinsV2/StankinsTestXUnit/Docker/docker-sqlserver-instance.yaml up -d   
+        rem docker image ls
+        rem docker container ls
+        rem docker-compose -f stankinsv2/solution/StankinsV2/StankinsTestXUnit/Docker/docker-sqlserver-instance.yaml down   
+
+- job: TestLinux
+  pool:
+    vmImage: 'ubuntu-16.04'
   condition: eq(variables['stop'],1)
   steps:
     #- checkout: none #skip checking out the default repository resource
@@ -34,7 +48,7 @@ jobs:
         docker image ls
         docker container ls
         docker-compose -f stankinsv2/solution/StankinsV2/StankinsTestXUnit/Docker/docker-sqlserver-instance.yaml down   
-     
+          
 - job: SetProps
   pool:
     vmImage: 'vs2017-win2016'
