--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/Docker/docker-sqlserver-instance.yaml
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/Docker/docker-sqlserver-instance.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   db:
-    image: microsoft/mssql-server-windows-developer #mcr.microsoft.com/mssql/server
+    image: mcr.microsoft.com/mssql/server #microsoft/mssql-server-windows-developer #mcr.microsoft.com/mssql/server
     ports:
       - "1433:1433"
     environment:
