no nat for linux

--- a/stankinsv2/solution/StankinsV2/StankinsTestXUnit/Docker/docker-sqlserver-instance.yaml
+++ b/stankinsv2/solution/StankinsV2/StankinsTestXUnit/Docker/docker-sqlserver-instance.yaml
@@ -9,7 +9,7 @@ services:
       ACCEPT_EULA: "Y"
     healthcheck:
       test: sqlcmd -S (local) -U SA -P '<YourStrong!Passw0rd>' -Q 'select 1'
-networks:
-  default:
-    external:
-      name: nat   
+#networks:
+#  default:
+#    external:
+#      name: nat   
