--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ jobs:
     
     - script: |
         echo test
-        dotnet build -c Release stankinsv2/solution/StankinsV2/StankinsV2.csproj 
+        dotnet build stankinsv2/solution/StankinsV2/StankinsV2.sln 
       displayName: build linux
   
     
